[gd_scene load_steps=3 format=3 uid="uid://bduf14chnme06"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_i6q4s"]
[ext_resource type="PackedScene" uid="uid://dr6s4s30w43kn" path="res://scenes/inventory.tscn" id="2_iixtr"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_i6q4s")

[node name="UIBarPlaceholder" type="ColorRect" parent="."]
offset_top = 320.0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2
color = Color(0, 0, 0, 0.309804)

[node name="MarginContainer" type="MarginContainer" parent="UIBarPlaceholder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UIBarPlaceholder/MarginContainer"]
layout_mode = 2

[node name="InventoryButton" type="Button" parent="UIBarPlaceholder/MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "(I)nventory"

[node name="Control" type="Control" parent="UIBarPlaceholder/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="UIBarPlaceholder/MarginContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Next"

[node name="Inventory" parent="." instance=ExtResource("2_iixtr")]
visible = false
offset_top = 91.0
offset_bottom = 91.0

[connection signal="pressed" from="UIBarPlaceholder/MarginContainer/HBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="toggled" from="UIBarPlaceholder/MarginContainer/HBoxContainer/InventoryButton" to="." method="_on_inventory_button_toggled"]
[connection signal="pressed" from="UIBarPlaceholder/MarginContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
